--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,6 +12,7 @@ encoding//DataAnomalyAnalyzer/skyline_calc10.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc11.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc12.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc13.py=utf-8
+encoding//DataAnomalyAnalyzer/skyline_calc14.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc2.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc3.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc4.py=utf-8
