--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//AlgorithmsReform/skyline_calc.py=utf-8
 encoding//DataAnomalyAnalyzer/isolation_forest.py=utf-8
 encoding//DataAnomalyAnalyzer/load_data.py=utf-8
 encoding//DataAnomalyAnalyzer/main_analyzer.py=utf-8
+encoding//DataAnomalyAnalyzer/main_analyzer2.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_algorithms.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc10.py=utf-8
@@ -13,6 +14,8 @@ encoding//DataAnomalyAnalyzer/skyline_calc11.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc12.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc13.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc14.py=utf-8
+encoding//DataAnomalyAnalyzer/skyline_calc15.py=utf-8
+encoding//DataAnomalyAnalyzer/skyline_calc16.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc2.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc3.py=utf-8
 encoding//DataAnomalyAnalyzer/skyline_calc4.py=utf-8
